# portfolio-tracker-tui

./: Cargo.toml  README.md
sample_data/: transactions.csv  transactions_isin.csv
src/: lib.rs  main.rs  mod.rs
src/api/: av.rs  av_dto.rs  base.rs  dto.rs  fmp.rs  fmp_dto.rs  frank.rs  frank_dto.rs  marketstack.rs  marketstack_dto.rs  mod.rs  utils.rs
src/app/: app.rs  calc.rs  mod.rs  portfolio.rs  ui.rs  utils.rs
src/db/: init.rs  utils.rs  write.rs
src/db/migrations/: 20250502051006_create_table_tickers.sql  20250502051011_create_table_assets.sql  20250502051015_create_table_transactions.sql
src/models/: asset.rs  holding.rs  mod.rs  position.rs  position_state.rs  quote.rs  ticker.rs  transaction.rs  transaction_gains.rs
src/services/: mod.rs  portfolio_tracker_service.rs
src/test/: calc.rs  marketstack.rs  mod.rs
