[package]
name = "portfolio-tracker-tui"
version = "0.1.0"
edition = "2024"
authors = ["Aykut Schürmeyer"]
description = "A terminal-based portfolio tracker"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
csv = "1.3"
derive-getters = "0.5.0"
dotenv = "0.15"
ratatui = "0.29.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
