[package]
name = "portfolio-tracker-tui"
version = "0.1.0"
edition = "2024"
authors = ["Aykut Schürmeyer"]
description = "A terminal-based portfolio tracker"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
csv = "1.3"
derive-getters = "0.5.0"
derive-new = "0.7.0"
dotenv = "0.15"
ratatui = "0.29.0"
regex = "1.10"
reqwest = { version = "0.12.23", features = ["json"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.37.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tempfile = "3.20.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
